tests/snapshots/generated_benchmarks-2.snap
---
source: tests/mod.rs
expression: "debug_info.resolve_function(\"main\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "main",
    address: "0x10000762c",
    params: [],
}
