tests/snapshots/generated_benchmarks-5.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100003560",
}
