tests/snapshots/generated_benchmarks@large-2.snap
---
source: tests/mod.rs
expression: "debug_info.resolve_function(\"main\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "large::main",
    address: "0x100003e28",
    params: [],
}
