tests/snapshots/generated_benchmarks@large-5.snap
---
source: tests/mod.rs
expression: location
snapshot_kind: text
---
ResolvedLocation {
    function: "large::TestStruct0::method_0",
    file: "/Users/sam/work/rust_debuginfo/benches/test_binaries/large.rs",
    line: 17,
}
