tests/snapshots/generated_benchmarks@medium-5.snap
---
source: tests/mod.rs
expression: location
snapshot_kind: text
---
ResolvedLocation {
    function: "medium::TestStruct0::method_0",
    file: "/Users/sam/work/rust_debuginfo/benches/test_binaries/medium.rs",
    line: 17,
}
